internet-gateways.tf
resource "aws_internet_gateway" "gw" {
 vpc_id = aws_vpc.main.id
 tags = {
 Name = "CYBERSECURITY_SUBNET_IGW"
 }
}
