route-tables.tf
resource "aws_route_table" "r" {
 vpc_id = aws_vpc.main.id
 route {
 cidr_block = "0.0.0.0/0"
 gateway_id = aws_internet_gateway.gw.id
 }
 tags = {
 Name = "CYBER_SECURITY_RTB"
 }
}
resource "aws_route_table_association" "a" {
 subnet_id = aws_subnet.public.id
 route_table_id = aws_route_table.r.id
}
